stretched the map to full screen, made game panel fixed

--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,32 @@
 /* my stuff */
 .navbar-dark {
     background-color: #46433A;
+    min-height: 5vh;
 }
-  
+
+.nav-link {
+    padding-right: .5rem;
+    padding-left: .5rem;
+}
+
 .leaflet-container {
-    min-height: 500px;
+    /*min-height: 500px;
+    height: 100%; */
+    min-height: 91vh;
+    height: 100%;
+}
+
+.jumbotron {
+    top: 12%;
+    right: 1%;
+    left: 65%;
+    z-index: 10000;
+    padding: 1rem 1rem;
 }
 
 .flag-img {
-    min-height: 80px;
+    /*min-height: 80px;*/
+    width: 100%;
 }
 
 .media-object {
@@ -28,4 +46,5 @@
     margin-top: 5px;
     min-height: 1px;
     padding: 1.25rem;
+    background-color: rgba(0,0,0,.03);
 }
